# Ordinary_Keyboard

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
Reference/: HW.macro  keymap.xlsx
main/: CMakeLists.txt  Ordinary_Keyboard_main.c  Ordinary_Keyboard_main.h  configure_server.c  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_dev.h  hid_device_le_prf.c  hidd_le_prf_int.h  keyboard_macro.c  keyboard_macro.h  keyboard_scan.c  start_ble_hid_server.c  upload_script.html  wifi_connect.c
